--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
     <title>Liste des fruits</title>
 </head>
+
 <body>
     <h1>Vos achats :</h1>
     <ul>
         {% for fruit in fruits %}
-        <li>{{ fruit }} - {{ fruit.prix() }}</li>
+        <li>{{ fruit }} - <strong>{{ fruit.prix() }}</strong></li>
         {% endfor %}
     </ul>
 </body>
+
 </html>
