--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <h1>Vos achats :</h1>
     <ul>
         {% for fruit in fruits %}
-        <li>{{ fruit }} - <strong>{{ fruit.prix() }}</strong></li>
+        <li><em><strong>{{ fruit }}</strong></em></li>
         {% endfor %}
     </ul>
 </body>
